# april

./: .gitignore  D3DX11-notice.txt  D3DX9-notice.txt  Doxyfile  Info.plist  Makefile.am  Makefile.in  april.mkb  april.mkf  autogen.sh  configure  configure.ac  fileproperties.rc  libapril.project  libapril.sln  libapril.vcproj  libapril.vcxproj  libapril.vcxproj.filters  libapril.workspace  libapril_2008.sln  libapril_2010.sln  libapril_2012.sln  libapril_WinRT.sln  libapril_WinRT.vcxproj  libapril_WinRT.vcxproj.filters  libapril_vs2012-winrt.sln  libapril_vs2012.sln  libapril_vs2013-winp8.sln  libapril_vs2013.sln  libapril_vs2015-uwp.sln  libapril_vs2015.sln  main_android.cpp  main_ios.m  main_ios.mm  main_mac.m  main_win32.cpp
android-studio/demos-april/demo_helloworld/: CMakeLists.txt  build.gradle
android-studio/demos/demo_helloworld/: CMakeLists.txt  build.gradle
android-studio/demos/demo_motion/: CMakeLists.txt  build.gradle
android-studio/demos/demo_pix/: CMakeLists.txt  build.gradle
android-studio/demos/demo_simple/: CMakeLists.txt  build.gradle
android-studio/lib/: CMakeLists.txt  build.gradle
android-studio/lib/app/: build.gradle
aprilpix/android-studio/lib/: CMakeLists.txt  build.gradle
aprilpix/android-studio/lib-no-encode/: CMakeLists.txt  build.gradle
branches/1.3/src/: Color.cpp  ImageSourceCG.mm  Makefile.am  TimerSDL.cpp  TimerWin.cpp
rendersystems/OpenGL/: Makefile.am  OpenGL_RenderSystem.cpp  OpenGL_RenderSystem.h  OpenGL_State.cpp  OpenGL_Texture.cpp  OpenGL_Texture.h  RenderSystem_GL.cpp  RenderSystem_GL.h
rendersystems/OpenGL/1/: OpenGL1_RenderSystem.cpp  OpenGL1_RenderSystem.h  OpenGL1_Texture.cpp
rendersystems/OpenGL/ES/: OpenGLES_RenderSystem.cpp  OpenGLES_RenderSystem.h  OpenGLES_Texture.cpp  OpenGLES_Texture.h
src/: Application.cpp  Color.cpp  Cursor.cpp  ImageSource.cpp  ImageSourceAndroid.cpp  ImageSourceCG.mm  ImageSourceIL.cpp  ImageSourceJpg.cpp  ImageSourcePng.cpp  InputMode.cpp  Keys.cpp  Makefile.am  PixelShader.cpp  Platform.cpp  RamTexture.cpp  RenderHelper.cpp  RenderHelper.h  RenderHelperLayered2D.cpp  RenderHelperLayered2D.h  RenderState.cpp  RenderState.h  RenderSystem.cpp  Texture.cpp  TextureAsync.cpp  TextureAsync.h  TextureManager.cpp  TimerPosix.cpp  TimerSDL.cpp  TimerWin.cpp  VertexShader.cpp  VirtualKeyboard.cpp  WinTimer.cpp  Window.cpp  april.cpp  aprilUtil.cpp  egl.cpp  egl.h  main_android.cpp  main_base.cpp  main_ios.mm  (+3 more)
src/async/: AssignWindowCommand.cpp  AssignWindowCommand.h  AsyncCommand.cpp  AsyncCommand.h  AsyncCommandQueue.cpp  AsyncCommandQueue.h  AsyncCommands.h  ClearColorCommand.cpp  ClearColorCommand.h  ClearCommand.cpp  ClearCommand.h  ClearDepthCommand.cpp  ClearDepthCommand.h  CreateCommand.cpp  CreateCommand.h  CreateWindowCommand.cpp  CreateWindowCommand.h  CustomCommand.cpp  CustomCommand.h  DestroyCommand.cpp  DestroyCommand.h  DestroyTextureCommand.cpp  DestroyTextureCommand.h  DestroyWindowCommand.cpp  DestroyWindowCommand.h  PresentFrameCommand.cpp  PresentFrameCommand.h  RenderCommand.cpp  RenderCommand.h  ResetCommand.cpp  ResetCommand.h  SetWindowResolutionCommand.cpp  SetWindowResolutionCommand.h  StateUpdateCommand.cpp  StateUpdateCommand.h  SuspendCommand.cpp  SuspendCommand.h  TakeScreenshotCommand.cpp  TakeScreenshotCommand.h  UnassignWindowCommand.cpp  (+4 more)
src/delegates/: ControllerDelegate.cpp  EventDelegate.cpp  InputDelegate.cpp  KeyDelegate.cpp  KeyboardDelegate.cpp  MotionDelegate.cpp  MouseDelegate.cpp  SystemDelegate.cpp  TouchDelegate.cpp  UpdateDelegate.cpp
src/events/: ControllerEvent.cpp  GenericEvent.cpp  KeyEvent.cpp  MotionEvent.cpp  MouseEvent.cpp  TouchEvent.cpp  TouchesEvent.cpp
src/images/: Image.cpp  ImageEtcx.cpp  ImageJpg.cpp  ImageJpt.cpp  ImagePng.cpp  ImagePvr.mm  ImagePvrz.cpp
src/rendercommands/: ClearColorCommand.cpp  ClearColorCommand.h  ClearCommand.cpp  ClearCommand.h  ClearDepthCommand.cpp  ClearDepthCommand.h  PresentFrameCommand.cpp  PresentFrameCommand.h  RenderCommand.cpp  RenderCommand.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderCommands.h  ResetCommand.cpp  ResetCommand.h  StateUpdateCommand.cpp  StateUpdateCommand.h  SuspendCommand.h  VertexRenderCommand.h
src/timers/: TimerPosix.cpp  TimerSDL.cpp  TimerWin.cpp
src/util/: egl.cpp  egl.h  zlibUtil.cpp  zlibUtil.h
trunk/: Doxyfile  Makefile.am  TODO  aclocal.m4  april.mkb  april.mkf  autogen.sh  configure  configure.ac  fileproperties.rc  libapril.project  libapril.sln  libapril.vcproj  libapril.vcxproj  libapril.vcxproj.filters  libapril.workspace  libapril_2010.sln  libapril_2012.sln  libapril_WinRT.sln  libapril_WinRT.vcxproj  libapril_WinRT.vcxproj.filters  libapril_vs2012-winrt.sln  libapril_vs2012.sln  libapril_vs2013.sln  main_ios.m  main_ios.mm  main_mac.mm  main_marmelade.cpp  main_win32.cpp
trunk/android/: AndroidManifest.xml  build.xml
trunk/android-template/: AndroidManifest.xml  project.properties
trunk/april.xcodeproj/: project.pbxproj
trunk/aprilutil/: Makefile.am  Makefile.in  aprilutil.mkf  configure  configure.ac  fileproperties.rc  libaprilutil.project  libaprilutil.vcproj  libaprilutil.vcxproj  libaprilutil.vcxproj.filters
trunk/libapril-ios.xcodeproj/: project.pbxproj
trunk/libapril.xcodeproj/: project.pbxproj
trunk/props/: v110-winrt.configuration.props  v110-winrt.default.props  v110.configuration.props  v110.default.props
trunk/scripts/: JPT-readme.txt  jpt-tool.py
trunk/src/: Color.cpp  Cursor.cpp  ImageSource.cpp  ImageSourceAndroid.cpp  ImageSourceCG.mm  ImageSourceIL.cpp  ImageSourceJpg.cpp  ImageSourceMarmelade.cpp  ImageSourcePng.cpp  Makefile.in  PixelShader.cpp  Platform.cpp  RamTexture.cpp  RenderState.cpp  RenderSystem.cpp  Texture.cpp  TextureAsync.cpp  TextureAsync.h  TextureManager.cpp  TimerPosix.cpp  TimerSDL.cpp  TimerWin.cpp  VertexShader.cpp  WinTimer.cpp  Window.cpp  april.cpp  aprilUtil.cpp  egl.cpp  egl.h  main_android.cpp  main_base.cpp  main_win32.cpp
windowsystems/SDL/: Makefile.am  Makefile.in  SDLWindow.cpp  SDLWindow.h  SDL_Cursor.cpp  SDL_Cursor.h  SDL_Window.cpp  SDL_Window.h
(+3008 files in other folders)
