AM_CFLAGS=-I../include -I../rendersystems/OpenGL -I../windowsystems/SDL
AM_CXXFLAGS=-I../include -I../rendersystems/OpenGL -I../windowsystems/SDL
lib_LIBRARIES = libapril_src.a
#libapril_a_configdir = $(libdir)/april/include
#libapril_a_config_DATA = config.h
libapril_src_a_SOURCES =  \
Color.cpp	   TimerPosix.cpp  Window.cpp \
ImageSourceCG.mm   RenderSystem.cpp  TimerSDL.cpp \
ImageSourceIL.cpp  Texture.cpp	     



