AM_CFLAGS=-I../../include/april -I../../rendersystems/OpenGL -I../../windowsystems/SDL
AM_CXXFLAGS=-I../../include/april -I../../rendersystems/OpenGL -I../../windowsystems/SDL
noinst_LIBRARIES = libapril_rendersystems_opengl.a
#libapril_a_configdir = $(libdir)/april/include
#libapril_a_config_DATA = config.h
libapril_rendersystems_opengl_a_SOURCES =  \
OpenGL_RenderSystem.cpp OpenGL_Texture.cpp


