AM_CFLAGS=-I../../include/april -I../../rendersystems/OpenGL -I../../windowsystems/SDL
AM_CXXFLAGS=-I../../include/april -I../../rendersystems/OpenGL -I../../windowsystems/SDL
noinst_LTLIBRARIES = libapril_rendersystems_opengl.la
#libapril_a_configdir = $(libdir)/april/include
#libapril_a_config_DATA = config.h
libapril_rendersystems_opengl_la_SOURCES =  \
OpenGL_RenderSystem.cpp OpenGL_Texture.cpp


