AM_CFLAGS=-I../../include/april -I../../rendersystems/OpenGL -I../../windowsystems/SDL
AM_CXXFLAGS=-I../../include/april -I../../rendersystems/OpenGL -I../../windowsystems/SDL
noinst_LIBRARIES = libapril_windowsystems_sdl.a
#libapril_a_configdir = $(libdir)/april/include
#libapril_a_config_DATA = config.h
libapril_windowsystems_sdl_a_SOURCES =  \
SDLWindow.cpp


