AM_CFLAGS=-I../include/april -I../rendersystems/OpenGL -I../windowsystems/SDL
AM_CXXFLAGS=-I../include/april -I../rendersystems/OpenGL -I../windowsystems/SDL
noinst_LTLIBRARIES = libapril_src.la
#libapril_a_configdir = $(libdir)/april/include
#libapril_a_config_DATA = config.h
libapril_src_la_SOURCES =  \
Color.cpp	   TimerPosix.cpp  Window.cpp \
ImageSourceCG.mm   RenderSystem.cpp  \
ImageSourceIL.cpp  Texture.cpp	     



